# scientific-calculator-

./: .bandit  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  demo.py  pyproject.toml  render.yaml  requirements.txt  server.py
.claude/: settings.local.json
.claude/commands/: deploy.md
.specify/memory/: constitution.md
frontend/: .eslintrc.json  .prettierignore  index.html  jest.a11y.config.js  package.json  vercel.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: CalculatorLayout.js  CalculatorSection.js  ConversionForm.js  ConversionResult.js  ErrorDisplay.js  ExpressionInput.js  ExpressionResult.js  FunctionHelp.js  FunctionInput.js  FunctionResult.js  StatisticalInput.js  UnitSelector.js
frontend/src/services/: calculatorApi.js
frontend/src/styles/: calculator-sections.css  main.css  responsive.css
frontend/src/utils/: accessibility.js  errorHandler.js  responsive.js  validation.js
frontend/tests/: dom-structure.test.js  horizontal-scroll.test.js  navigation.test.js  responsive-layout.test.js  touch-targets.test.js  visibility.test.js
frontend/tests/accessibility/: calculator.test.js  setup.js  test_conversion_display.js  test_expression_input.js  test_function_controls.js
history/prompts/001-scientific-units/: 0001-create-scientific-units-specification.spec.prompt.md  0002-plan-scientific-units-architecture.plan.prompt.md  0003-update-scientific-units-plan-for-ui-ux-first.plan.prompt.md  0004-generate-tasks-scientific-calculator.tasks.prompt.md  0005-implement-phase1-setup.red.prompt.md  0006-implement-phase2-foundational.green.prompt.md  0007-implement-phase5-expressions.green.prompt.md  0008-implement-phase6-release.green.prompt.md  0009-run-project-demonstration.green.prompt.md
history/prompts/002-redesign-calculator-ui/: 0001-create-ui-redesign-spec.spec.prompt.md  0002-create-implementation-plan.plan.prompt.md  0003-execute-implementation-plan.green.prompt.md  0004-clarify-specification-details.spec.prompt.md  (+1 more)
specs/001-scientific-units/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-redesign-calculator-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/scientific_calculator/: __init__.py  api.py  exceptions.py  expression_evaluator.py  functions.py  units.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_complex_expressions.py  test_scientific_integration.py  test_unit_conversion_workflow.py
tests/unit/: __init__.py  test_additional_coverage.py  test_conversion_errors.py  test_conversions.py  test_exponential.py  test_expression_errors.py  test_expression_grouping.py  test_expression_precedence.py  test_function_composition.py  test_logarithmic.py  test_mass_conversions.py  test_mixed_expressions.py  test_scientific_errors.py  test_statistical.py  test_temperature_conversions.py  test_trigonometric.py  test_volume_conversions.py
(+5 files in other folders)
